# Emzil

./: .env.example  blog.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
sandmail/: admin.py  apps.py  cron.py  forms.py  models.py  urls.py  views.py
sandmail/migrations/: 0001_initial.py  0002_client_remove_mailsand_periodicity_mailsand_end_send_and_more.py  0002_initial.py  0003_remove_mailsand_owner_mailsand_clients.py  0003_remove_mailsand_time_of_distribution.py  0004_mailsand_name_mail_mailsand_text_mail_and_more.py  0004_remove_mailsand_clients_mailsand_owner.py  0005_alter_mailsand_options.py
sandmail/templates/sandmail/: base.html  client_confirm_delete.html  client_form.html  client_list.html  emaillog_list.html  home.html  mailsand_confirm_delete.html  mailsand_detail.html  mailsand_form.html  mailsand_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createSU.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html  verification.html
